# rs-textsearch

./: Cargo.toml  LICENSE
src/: document.rs  global.rs  index.rs  lib.rs  n_gram.rs  prefix_index.rs  search.rs  splitter.rs  stem.rs  text_index.rs  tokenize.rs
tests/: document_test.rs  global_test.rs  index_test.rs  search_test.rs
