[package]
name = "textsearch"
description = "Full text search for rust"
license = "MIT"
version = "0.1.0"
authors = ["Travis Sturzl <travissturzl@gmail.com>"]

[badges]
travis-ci = { repository = "tsturzl/rs-textsearch", branch = "master" }

[dependencies]
uuid = { version = "0.2", features = ["serde", "v4"] }
futures = "0.1.9"
futures-cpupool = "0.1"